syntax = "proto3";

import "shared.proto";

package sensorData;

service SensorDataService {
  rpc CreateSensorData(stream SensorDataCreation)  returns (SensorData) {}
  rpc GetSensorDataById(Id)  returns (SensorData) {}
  rpc GetAllSensorData(Empty) returns (SensorDataArray) {}
  rpc GetPictureById(Id) returns (stream Picture) {}
  rpc RemoveSensorDataById(Id) returns (Empty) {}
}
